[gd_scene load_steps=7 format=2]

[ext_resource path="res://furniture/chopping_board/chopping_board.png" type="Texture" id=1]
[ext_resource path="res://furniture/chopping_board/work_station.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 28, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=4]
radius = 2.0

[node name="WorkStation" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="DetectorBoard" type="Area2D" parent="." groups=[
"Interactable",
]]
position = Vector2( -19, 26 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorBoard"]
shape = SubResource( 3 )

[node name="DetectorBowl" type="Area2D" parent="." groups=[
"Interactable",
]]
position = Vector2( 17, 26 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorBowl"]
shape = SubResource( 3 )

[node name="CuttingBoard" type="Area2D" parent="."]
position = Vector2( -11, -10 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CuttingBoard"]
shape = SubResource( 4 )
